Fix: Corrected disconnect button overlapping wprdpress warning.

--- a/src/admin/css/pages/_connect.scss
+++ b/src/admin/css/pages/_connect.scss
@@ -21,6 +21,7 @@
     
     #dplr_logo {
         margin: 90px 0 60px 0;
+        display: block;
         img {
             width: 210px;
         }
@@ -31,11 +32,15 @@
         margin-bottom: 50px;
     }
 
-    form {
+    .disconnect-box{
+      float: right;
+    }
+
+    form#dplr-connect-form{
         .dp-button {
             position: absolute;
             top: 18px;
-            right: 10px;
+            right: 20px;
         }
         .dplr-input-section {
           margin-top: 0px;
